@@ -399,236 +399,242 @@ SPI NOR Flash Support List:
 044. MX25L4005A
 045. MX25L8005M
 046. MX25L1605D
-047. MX25L3205D
-048. MX25L6405D
-049. MX25L12805D
-050. MX25L25635E
-051. MX25L51245G
-052. YC25Q128
-053. FL016AIF
-054. FL064AIF
-055. S25FL016P
-056. S25FL032P
-057. S25FL064P
-058. S25FL128P
-059. S25FL129P
-060. S25FL256S
-061. S25FL512S
-062. S25FL116K
-063. S25FL132K
-064. S25FL164K
-065. EN25F16
-066. EN25Q16
-067. EN25QH16
-068. EN25Q32B
-069. EN25F32
-070. EN25F64
-071. EN25Q64
-072. EN25QA64A
-073. EN25QH64A
-074. EN25Q128
-075. EN25Q256
-076. EN25QA128A
-077. EN25QH128A
-078. GM25Q128A
-079. W25X05
-080. W25X10
-081. W25X20
-082. W25X40
-083. W25X80
-084. W25X16
-085. W25X32VS
-086. W25X64
-087. W25Q20CL
-088. W25Q20BW
-089. W25Q20EW
-090. W25Q80
-091. W25Q80BL
-092. W25Q16JQ
-093. W25Q16JM
-094. W25Q32BV
-095. W25Q32DW
-096. W25Q32JWIM
-097. W25Q64BV
-098. W25Q64DW
-099. W25Q64JVIM
-100. W25Q128BV
-101. W25Q128FW
-102. W25Q256FV
-103. W25Q256JW
-104. W25Q256JWIM
-105. W25Q512JV
-106. W25Q512JVIM
-107. W25Q512NW
-108. W25Q512NWIM
-109. M25P05
-110. M25P10
-111. M25P20
-112. M25P40
-113. M25P80
-114. M25P16
-115. M25P32
-116. M25P64
-117. M25P128
-118. N25Q016A
-119. N25Q032A
-120. N25Q032A
-121. N25Q064A
-122. N25Q064A
-123. N25Q128A
-124. N25Q128A
-125. N25Q256A
-126. N25Q512A
-127. MT25QL64AB
-128. MT25QU64AB
-129. MT25QL128AB
-130. MT25QU128AB
-131. MT25QL256AB
-132. MT25QU256AB
-133. MT25QL512AB
-134. MT25QU512AB
-135. XM25QH10B
-136. XM25QH20B
-137. XM25QU41B
-138. XM25QH40B
-139. XM25QU80B
-140. XM25QH80B
-141. XM25QU16B
-142. XM25QH16C
-143. XM25QW16C
-144. XM25QH32B
-145. XM25QW32C
-146. XM25LU32C
-147. XM25QH32A
-148. XM25QH64C
-149. XM25LU64C
-150. XM25QW64C
-151. XM25QH64A
-152. XM25QH128A
-153. XM25QH128C
-154. XM25LU128C
-155. XM25QW128C
-156. XM25QH256C
-157. XM25QU256C
-158. XM25QW256C
-159. XM25QH512C
-160. XM25QU512C
-161. XM25QW512C
-162. MD25D20
-163. MD25D40
-164. ZB25VQ16
-165. ZB25LQ16
-166. ZB25VQ32
-167. ZB25LQ32
-168. ZB25VQ64
-169. ZB25LQ64
-170. ZB25VQ128
-171. ZB25LQ128
-172. LE25U20AMB
-173. LE25U40CMC
-174. BY25D05AS
-175. BY25D10AS
-176. BY25D20AS
-177. BY25D40AS
-178. BY25Q40BL
-179. BY25Q40BL
-180. BY25Q80BS
-181. BY25Q16BS
-182. BY25Q16BL
-183. BY25Q32BS
-184. BY25Q32AL
-185. BY25Q64AS
-186. BY25Q64AL
-187. BY25Q128AS
-188. BY25Q128EL
-189. BY25Q256ES
-190. XT25F04D
-191. XT25F08B
-192. XT25F08D
-193. XT25F16B
-194. XT25Q16D
-195. XT25F32B
-196. XT25F64B
-197. XT25Q64D
-198. XT25F128B
-199. XT25F128D
-200. PM25LQ016
-201. PM25LQ032
-202. PM25LQ064
-203. PM25LQ128
-204. IS25LQ010
-205. IS25LQ020
-206. IS25WP040D
-207. IS25LP080D
-208. IS25WP080D
-209. IS25LP016D
-210. IS25WP016D
-211. IS25LP032D
-212. IS25WP032D
-213. IS25LP064D
-214. IS25WP064D
-215. IS25LP128F
-216. IS25WP128F
-217. IS25LP256D
-218. IS25WP256D
-219. IS25LP256D
-220. IS25WP256D
-221. FM25W04
-222. FM25Q04
-223. FM25Q08
-224. FM25W16
-225. FM25Q16
-226. FM25W32
-227. FS25Q32
-228. FM25W64
-229. FS25Q64
-230. FM25W128
-231. FS25Q128
-232. FM25Q04A
-233. FM25M04A
-234. FM25Q08A
-235. FM25M08A
-236. FM25Q16A
-237. FM25M16A
-238. FM25Q32A
-239. FM25M32B
-240. FM25Q64A
-241. FM25M64A
-242. FM25Q128A
-243. PN25F16
-244. PN25F32
-245. PN25F64
-246. PN25F128
-247. P25D05H
-248. P25D10H
-249. P25D20H
-250. P25D40H
-251. P25D80H
-252. P25Q16H
-253. P25Q32H
-254. P25Q64H
-255. P25Q128H
-256. PY25Q128HA
-257. SK25P32
-258. SK25P64
-259. SK25P128
-260. ZD25Q16A
-261. ZD25Q32A
-262. ZD25Q64A
-263. ZD25Q128A
-264. ZD25Q16B
-265. ZD25Q32B
-266. ZD25Q64B
-267. ZD25Q128B
-268. PCT25VF010A
-269. PCT25VF020B
-270. PCT25VF040B
-271. PCT25VF080B
-272. PCT25VF016B
-273. PCT25VF032B
-274. PCT25VF064C
-275. PCT26VF016
-276. PCT26VF032
+047. MX25U1635F
+048. MX25L3205D
+049. MX25U3235F
+050. MX25L6405D
+051. MX25U6435F
+052. MX25L12805D
+053. MX25U12835F
+054. MX25L25635E
+055. MX25U25643G
+056. MX25L51245G
+057. MX25U51245G
+058. YC25Q128
+059. FL016AIF
+060. FL064AIF
+061. S25FL016P
+062. S25FL032P
+063. S25FL064P
+064. S25FL128P
+065. S25FL129P
+066. S25FL256S
+067. S25FL512S
+068. S25FL116K
+069. S25FL132K
+070. S25FL164K
+071. EN25F16
+072. EN25Q16
+073. EN25QH16
+074. EN25Q32B
+075. EN25F32
+076. EN25F64
+077. EN25Q64
+078. EN25QA64A
+079. EN25QH64A
+080. EN25Q128
+081. EN25Q256
+082. EN25QA128A
+083. EN25QH128A
+084. GM25Q128A
+085. W25X05
+086. W25X10
+087. W25X20
+088. W25X40
+089. W25X80
+090. W25X16
+091. W25X32VS
+092. W25X64
+093. W25Q20CL
+094. W25Q20BW
+095. W25Q20EW
+096. W25Q80
+097. W25Q80BL
+098. W25Q16JQ
+099. W25Q16JM
+100. W25Q32BV
+101. W25Q32DW
+102. W25Q32JWIM
+103. W25Q64BV
+104. W25Q64DW
+105. W25Q64JVIM
+106. W25Q128BV
+107. W25Q128FW
+108. W25Q256FV
+109. W25Q256JW
+110. W25Q256JWIM
+111. W25Q512JV
+112. W25Q512JVIM
+113. W25Q512NW
+114. W25Q512NWIM
+115. M25P05
+116. M25P10
+117. M25P20
+118. M25P40
+119. M25P80
+120. M25P16
+121. M25P32
+122. M25P64
+123. M25P128
+124. N25Q016A
+125. N25Q032A
+126. N25Q032A
+127. N25Q064A
+128. N25Q064A
+129. N25Q128A
+130. N25Q128A
+131. N25Q256A
+132. N25Q512A
+133. MT25QL64AB
+134. MT25QU64AB
+135. MT25QL128AB
+136. MT25QU128AB
+137. MT25QL256AB
+138. MT25QU256AB
+139. MT25QL512AB
+140. MT25QU512AB
+141. XM25QH10B
+142. XM25QH20B
+143. XM25QU41B
+144. XM25QH40B
+145. XM25QU80B
+146. XM25QH80B
+147. XM25QU16B
+148. XM25QH16C
+149. XM25QW16C
+150. XM25QH32B
+151. XM25QW32C
+152. XM25LU32C
+153. XM25QH32A
+154. XM25QH64C
+155. XM25LU64C
+156. XM25QW64C
+157. XM25QH64A
+158. XM25QH128A
+159. XM25QH128C
+160. XM25LU128C
+161. XM25QW128C
+162. XM25QH256C
+163. XM25QU256C
+164. XM25QW256C
+165. XM25QH512C
+166. XM25QU512C
+167. XM25QW512C
+168. MD25D20
+169. MD25D40
+170. ZB25VQ16
+171. ZB25LQ16
+172. ZB25VQ32
+173. ZB25LQ32
+174. ZB25VQ64
+175. ZB25LQ64
+176. ZB25VQ128
+177. ZB25LQ128
+178. LE25U20AMB
+179. LE25U40CMC
+180. BY25D05AS
+181. BY25D10AS
+182. BY25D20AS
+183. BY25D40AS
+184. BY25Q40BL
+185. BY25Q40BL
+186. BY25Q80BS
+187. BY25Q16BS
+188. BY25Q16BL
+189. BY25Q32BS
+190. BY25Q32AL
+191. BY25Q64AS
+192. BY25Q64AL
+193. BY25Q128AS
+194. BY25Q128EL
+195. BY25Q256ES
+196. XT25F04D
+197. XT25F08B
+198. XT25F08D
+199. XT25F16B
+200. XT25Q16D
+201. XT25F32B
+202. XT25F64B
+203. XT25Q64D
+204. XT25F128B
+205. XT25F128D
+206. PM25LQ016
+207. PM25LQ032
+208. PM25LQ064
+209. PM25LQ128
+210. IS25LQ010
+211. IS25LQ020
+212. IS25WP040D
+213. IS25LP080D
+214. IS25WP080D
+215. IS25LP016D
+216. IS25WP016D
+217. IS25LP032D
+218. IS25WP032D
+219. IS25LP064D
+220. IS25WP064D
+221. IS25LP128F
+222. IS25WP128F
+223. IS25LP256D
+224. IS25WP256D
+225. IS25LP256D
+226. IS25WP256D
+227. FM25W04
+228. FM25Q04
+229. FM25Q08
+230. FM25W16
+231. FM25Q16
+232. FM25W32
+233. FS25Q32
+234. FM25W64
+235. FS25Q64
+236. FM25W128
+237. FS25Q128
+238. FM25Q04A
+239. FM25M04A
+240. FM25Q08A
+241. FM25M08A
+242. FM25Q16A
+243. FM25M16A
+244. FM25Q32A
+245. FM25M32B
+246. FM25Q64A
+247. FM25M64A
+248. FM25Q128A
+249. PN25F16
+250. PN25F32
+251. PN25F64
+252. PN25F128
+253. P25D05H
+254. P25D10H
+255. P25D20H
+256. P25D40H
+257. P25D80H
+258. P25Q16H
+259. P25Q32H
+260. P25Q64H
+261. P25Q128H
+262. PY25Q128HA
+263. SK25P32
+264. SK25P64
+265. SK25P128
+266. ZD25Q16A
+267. ZD25Q32A
+268. ZD25Q64A
+269. ZD25Q128A
+270. ZD25Q16B
+271. ZD25Q32B
+272. ZD25Q64B
+273. ZD25Q128B
+274. PCT25VF010A
+275. PCT25VF020B
+276. PCT25VF040B
+277. PCT25VF080B
+278. PCT25VF016B
+279. PCT25VF032B
+280. PCT25VF064C
+281. PCT26VF016
+282. PCT26VF032
 
 I2C EEPROM Support List:
 001. 24c01
