@@ -349,11 +349,17 @@ static struct chip_info chips_data [] = {
 	{ "MX25L4005A",		0xc2, 0x2013c220, 64 * 1024, 8,   0 },
 	{ "MX25L8005M",		0xc2, 0x2014c220, 64 * 1024, 16,  0 },
 	{ "MX25L1605D",		0xc2, 0x2015c220, 64 * 1024, 32,  0 },
+	{ "MX25U1635F",		0xc2, 0x2535c220, 64 * 1024, 32,  0 },
 	{ "MX25L3205D",		0xc2, 0x2016c220, 64 * 1024, 64,  0 },
+	{ "MX25U3235F",		0xc2, 0x2536c220, 64 * 1024, 64,  0 },
 	{ "MX25L6405D",		0xc2, 0x2017c220, 64 * 1024, 128, 0 },
+	{ "MX25U6435F",		0xc2, 0x2537c220, 64 * 1024, 128, 0 },
 	{ "MX25L12805D",	0xc2, 0x2018c220, 64 * 1024, 256, 0 },
+	{ "MX25U12835F",	0xc2, 0x2538c220, 64 * 1024, 256, 0 },
 	{ "MX25L25635E",	0xc2, 0x2019c220, 64 * 1024, 512, 1 },
+	{ "MX25U25643G",	0xc2, 0x2539c220, 64 * 1024, 512, 1 },
 	{ "MX25L51245G",	0xc2, 0x201ac220, 64 * 1024, 1024, 1 },
+	{ "MX25U51245G",	0xc2, 0x253ac220, 64 * 1024, 1024, 1 },
 
 	{ "YC25Q128",		0xd8, 0x4018d840, 64 * 1024, 256, 0 },
 
